--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
+android.library.reference.1=libs/appcompat
+android.library.reference.2=libs/floatinglabel-widgets
+target=android-22
 
