Update build tools and support libraries

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.tomclaw.minimonster"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -19,9 +18,9 @@ android {
 }
 
 dependencies {
-    compile project(':floatinglabelwidgets')
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.google.code.gson:gson:2.7'
-    compile files('libs/sdk-0.1.4.jar')
+    implementation project(':floatinglabelwidgets')
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation files('libs/sdk-0.1.4.jar')
 }
