--- a/floatinglabelwidgets/build.gradle
+++ b/floatinglabelwidgets/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -18,5 +17,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:25.3.1'
+    implementation 'com.android.support:support-v4:28.0.0'
 }
